대시보드 종류별 데이터 호출기능 개발